--- a/resources/scss/corporate-ui-dashboard/bootstrap/_button-group.scss
+++ b/resources/scss/corporate-ui-dashboard/bootstrap/_button-group.scss
@@ -33,6 +33,27 @@
   }
 }
 
+.btn-grad {
+    background-image: linear-gradient(to right, #4f2d61 0%, #b0313d  71%, #4f2d61  100%);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+}
+
+.btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+}
+
+
 .btn-group {
   @include border-radius($btn-border-radius);
 
