--- a/resources/scss/corporate-ui-dashboard/bootstrap/_button-group.scss
+++ b/resources/scss/corporate-ui-dashboard/bootstrap/_button-group.scss
@@ -35,7 +35,7 @@
 
 .btn-grad {
     background-image: linear-gradient(to right, #4f2d61 0%, #b0313d  71%, #4f2d61  100%);
-    margin: 10px;
+    margin-top: 15px;
     padding: 15px 45px;
     text-align: center;
     text-transform: uppercase;
@@ -43,11 +43,31 @@
     background-size: 200% auto;
     color: white;
     box-shadow: 0 0 20px #eee;
-    border-radius: 10px;
+    border-radius: 30px;
     display: block;
 }
 
 .btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+}
+
+.btn-grad-secondary {
+    background-image: linear-gradient(to right, #3D2E49FF 0%, #69212a 71%, #3D2E49FF  100%);
+    margin-top: 15px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 30px;
+    display: block;
+}
+
+.btn-grad-secondary:hover {
     background-position: right center; /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
